RESOLVED FIXED101445
[WK2] Return earlier if a plugin snapshot cannot be created.
https://bugs.webkit.org/show_bug.cgi?id=101445
Summary [WK2] Return earlier if a plugin snapshot cannot be created.
Raphael Kubo da Costa (:rakuco)
Reported 2012-11-07 03:43:48 PST
[WK2] Return earlier if a plugin snapshot cannot be created.
Attachments
Patch (1.66 KB, patch)
2012-11-07 03:45 PST, Raphael Kubo da Costa (:rakuco)
kenneth: review+
Raphael Kubo da Costa (:rakuco)
Comment 1 2012-11-07 03:45:19 PST
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-11-07 05:35:43 PST
Note You need to log in before you can comment on or make changes to this bug.