[WK2] Return earlier if a plugin snapshot cannot be created. https://bugs.webkit.org/show_bug.cgi?id=101445

Reviewed by Kenneth Rohde Christiansen.

Currently only the Mac port has support for creating snapshots of
Netscape plugins. Return earlier in PluginProxy::snapshot() so
that we do not pass a null handler to ShareableBitmap::create()
and avoid crashing when running pixel tests with plugins.

* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::snapshot):


Canonical link: https://commits.webkit.org/119543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133741 268f45cc-cd09-0410-ab3c-d52691b4dbfc